# data_insight_assistant

./: README.md  main.py  pyproject.toml
src/core/: config.py
src/data/: employees.csv
src/router/: api.py
src/schema/: models.py
src/service/: service.py
src/utils/: constants.py  hepler_function.py  logger.py  mixin.py  prompts.py
